[project]
name = "githubrepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathias Bergholt Buhl ",email = "mbbu@universal-robots.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "magiccube (>=1.2.0,<2.0.0)",
    "kociemba (>=1.2.1,<2.0.0)",
    "cube-solver (>=1.1.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
